--- a/AngularChatroom/ClientApp/src/app/game-room/game-state/game-state.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/game-state/game-state.component.html
@@ -1,11 +1,11 @@
-<div *ngIf="gamePhase == playCardsPhase || gamePhase == playOrBidPhase">
+<div *ngIf="gamePhase == gamePhases.PLAYCARDS || gamePhase == gamePhases.PLAYORBID">
     <p>{{activePlayer}}'s Turn</p>
 </div>
-<div *ngIf="gamePhase == biddingPhase">
+<div *ngIf="gamePhase == gamePhases.BIDDING">
     <p>{{activePlayer}}'s Turn</p>
     <p>Highest Bid: {{highestBid.bid}} from {{highestBid.name}}</p>
 </div>
-<div *ngIf="gamePhase == challengePhase">
+<div *ngIf="gamePhase == gamePhases.CHALLENGE">
     <p *ngIf="cardsToReveal > 0">{{activePlayer}} has to reveal {{cardsToReveal}} more {{cardsToReveal == 1 ? "card" : "cards"}}!</p>
 
     <p *ngIf="client.cardsPlayed > 0"> {{activePlayer}} has to reveal cards from their hand first!</p>
@@ -17,10 +17,16 @@
         </li>
     </ul>
 </div>
-<div *ngIf="gamePhase == roundOverPhase">
+<div *ngIf="gamePhase == gamePhases.ROUNDCOMPLETE">
     <p *ngIf="lastCard.card.toString == '💀' && isRevealedCardTheOwnersCard">{{activePlayer}} has lost the challenge, after revealing their own Skull card! They now discard a card of their choosing.</p>
     <p *ngIf="lastCard.card.toString == '💀' && !isRevealedCardTheOwnersCard">{{activePlayer}} has lost the challenge, after revealing another player's Skull! They now lose a card at random!</p>
     <p *ngIf="lastCard.card.toString == '🌼'">{{activePlayer}} has succeeded in revealing all {{highestBid.bid}} cards!</p>
     <p *ngIf="lastCard.card.toString == '🌼'">{{activePlayer}} has won the challenge, they're one step closer to winning the game!</p>
+
+    <p *ngIf="activePlayer.isStillPlaying == false">What a tragedy! {{activePlayer}} has lost their last card and is out of the game!</p>
+</div>
+<div *ngIf="gamePhase == gamePhases.GAMECOMPLETE">
+    <p *ngIf="lastCard.card.toString == '🌼'">{{activePlayer}} has won the game by winning 2 challenges!</p>
+    <p *ngIf="lastCard.card.toString == '💀'">{{activePlayer}} has won the game by eliminating all other challengers!</p>
 </div>
 
