--- a/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.html
@@ -5,24 +5,23 @@
         <p>Your hand:</p>
         <ul>
             <li *ngFor="let card of client.hand">
-                {{card.toString}} 
-                <button 
-                *ngIf="isClientTurn && (gamePhase == gamePhases.PLAYCARDS || gamePhase == gamePhases.PLAYORBID)"
-                (click)="playCard(card)">Play</button>
                 <button *ngIf="removeCardPrompt" (click)="removeCard(card)">Remove This Card</button>
+                {{card.toString}} {{client.hand.indexOf(card)}}
+                <button *ngIf="isClientTurn && (gamePhase == gamePhases.PLAYCARDS || gamePhase == gamePhases.PLAYORBID)"
+                    (click)="playCard(card)">Play</button>
             </li>
         </ul>
         <div id="action-buttons" *ngIf="isClientTurn">
-            <betting-component
-            id="bidding-area"
-            *ngIf="gamePhase == gamePhases.PLAYORBID || gamePhase == gamePhases.BIDDING"
-            [client]="client" [highestBid]="highestBid" [maxBid]="maxBid"
-            [canPass]="gamePhase == gamePhases.BIDDING">
+            <betting-component id="bidding-area"
+                *ngIf="gamePhase == gamePhases.PLAYORBID || gamePhase == gamePhases.BIDDING" [client]="client"
+                [highestBid]="highestBid" [maxBid]="maxBid" [canPass]="gamePhase == gamePhases.BIDDING">
             </betting-component>
             <button *ngIf="gamePhase == gamePhases.PLAYCARDS" (click)="endTurn()">End Turn</button>
         </div>
-        <button *ngIf="gamePhase == gamePhases.CHALLENGE && !client.hasPassedBidding && client.cardsPlayed > 0" (click)="revealCard()">Reveal your card</button>
-        <button *ngIf="gamePhase == gamePhases.ROUNDCOMPLETE && !client.hasPassedBidding && !removeCardPrompt" (click)="startNewRound()">Start New Round</button>
+        <button *ngIf="gamePhase == gamePhases.CHALLENGE && !client.hasPassedBidding && client.cardsPlayed > 0"
+            (click)="revealCard()">Reveal your card</button>
+        <button *ngIf="gamePhase == gamePhases.ROUNDCOMPLETE && !client.hasPassedBidding && !removeCardPrompt"
+            (click)="startNewRound()">Start New Round</button>
         <button *ngIf="gamePhase == gamePhases.GAMECOMPLETE">Start new game</button>
     </div>
 
