--- a/AngularChatroom/ClientApp/src/app/game-lobby/game-lobby.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-lobby/game-lobby.component.html
@@ -1,25 +1,18 @@
 <div>
     <div *ngIf="!hasGameStarted">
-        <input type="text" id="user" [(ngModel)]="clientPlayer.name" placeholder="Bill" />
-        <input *ngIf="!isClientReady" type="button" id="ready-button" value="Ready" (click)="clientPlayerReady()" />
-        <input *ngIf="isClientReady" type="button" id="update-name-button" value="Update Name" (click)="clientPlayerReady()" />
+        <h2>Room Id: {{roomId}}</h2>
 
         <div *ngIf="isClientReady">
             <input type="button" id="start-button" value="Start Game" (click)="start()" />
         </div>
 
         <ul *ngIf="!isGameInProgress" class="game-players">
-            <li *ngFor="let player of readyPlayers"
-                [ngClass]="player.id == clientId ? 'client' : ''">
-                <div class="list-item"
-                     *ngIf="player.id === clientId">{{player.name}} - (you)</div>
-                <div class="list-item"
-                     *ngIf="player.id !== clientId">{{player.name}}</div>
+            <li *ngFor="let player of readyPlayers" [ngClass]="player.id == clientId ? 'client' : ''">
+                <div class="list-item" *ngIf="player.id === clientId">{{player.name}} - (you)</div>
+                <div class="list-item" *ngIf="player.id !== clientId">{{player.name}}</div>
             </li>
         </ul>
     </div>
-    <app-game-room *ngIf="hasGameStarted"
-                   [clientId]="clientId"
-                   [isGameInProgress]="hasGameStarted">
+    <app-game-room *ngIf="hasGameStarted" [clientId]="clientId" [isGameInProgress]="hasGameStarted">
     </app-game-room>
 </div>
