--- a/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.css
+++ b/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.css
@@ -1,3 +1,12 @@
 .active-player {
   border: thick double #32a1ce;
 }
+.hand{
+  display: flex;
+  width: 550px;
+}
+.playingCard{
+  display: block;
+  width: 65px;
+  height: 65px;
+}
