--- a/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.html
@@ -3,6 +3,19 @@
     <p>Game Phase: {{gamePhase}}</p>
     <div id="playerActionsArea" [ngClass]="isClientTurn ? 'active-player' : ''">
         <p>Your hand:</p>
+        <div class="hand">
+            <div class="playingCard" *ngFor="let card of client.hand">
+                <svg *ngIf="card.toString == '🌼'">
+                    <circle cx="32" cy="32" r="30" stroke="#555" stroke-width="1" fill="white" />
+                    <circle cx="32" cy="32" r="15" stroke="#555" stroke-width="5" fill="none" />
+                </svg>
+                <svg *ngIf="card.toString == '💀'">
+                    <circle cx="32" cy="32" r="30" stroke="#555" stroke-width="1" fill="white" />
+                    <line x1="18" y1="18" x2="46" y2="46" stroke="#555" stroke-width="6" />
+                    <line x1="18" y1="46" x2="46" y2="18" stroke="#555" stroke-width="6" />
+                </svg>
+            </div>
+        </div>
         <ul>
             <li *ngFor="let card of client.hand">
                 {{card.toString}} {{client.hand.indexOf(card)}}
