More SVG changes

--- a/AngularChatroom/ClientApp/src/app/game-room/player-mat/player-mat.component.css
+++ b/AngularChatroom/ClientApp/src/app/game-room/player-mat/player-mat.component.css
@@ -6,7 +6,8 @@
   border-style: solid;
   border-radius: 5px;
   padding: 10px;
-  width: 240px;
+  width: 160px;
+  margin: 5px;
   color: #dcdcdc;
   font-family: helvetica;
   font-size: 18px;
